syntax = "proto3";

// A proxy identified by a unique name like "fs".
message NamedProxyMessage {
	uint64 id = 1;
	string module = 2;
	string method = 3;
	repeated string args = 4;
}

// A general proxy identified by an ID like WriteStream.
message NumberedProxyMessage {
	uint64 id = 1;
	uint64 proxy_id = 2;
	string method = 3;
	repeated string args = 4;
}

// Call a remote method.
message MethodMessage {
	oneof msg {
		NamedProxyMessage named_proxy = 1;
		NumberedProxyMessage numbered_proxy = 2;
	}
}

// Emit an event.
message EventMessage {
	uint64 proxy_id = 1;
	string event = 2;
	repeated string args = 3;
}

// Remote method failed.
message FailMessage {
	uint64 id = 1;
	string response = 2;
}

// Remote method succeeded.
message SuccessMessage {
	uint64 id = 1;
	string response = 2;
}

message Ping {}

message Pong {}
